--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,9 @@
 title: Bloei en Leef
 email: info@bloeienleef.nl
 description: Bloei en Leef staat voor een gezonde en eerlijke levensstijl.
-baseurl: ""
+baseurl: /BloeiLeef
 url: "http://localhost:"
+permalink: pretty
 
 # collections
 collections:
